--- a/app/src/main/res/layout-land/fragment_game.xml
+++ b/app/src/main/res/layout-land/fragment_game.xml
@@ -6,12 +6,15 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/answerContainer"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:weightSum="2">
+        android:weightSum="2"
+        android:layout_above="@id/viewQuestion">
 
         <RelativeLayout
+            android:id="@+id/answerBackground1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -28,6 +31,7 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/answerBackground2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -44,5 +48,15 @@
         </RelativeLayout>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/viewQuestion"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Question"
+        android:background="@android:color/white"
+        android:layout_alignParentBottom="true"
+        android:padding="16dp"
+        android:textAlignment="center"/>
 
 </RelativeLayout>
