Las preguntas son seleccionadas al mover el dispositivo hacia un lado, las respuesta seleccionada es validada, al momento en que se acaban las preguntas se termina el juego y regresa a la pantalla de inicio

--- a/app/src/main/res/layout-land/fragment_game.xml
+++ b/app/src/main/res/layout-land/fragment_game.xml
@@ -54,9 +54,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Question"
+        android:textColor="@android:color/holo_purple"
+        android:textSize="24sp"
+        android:textStyle="bold"
         android:background="@android:color/white"
         android:layout_alignParentBottom="true"
         android:padding="16dp"
         android:textAlignment="center"/>
+
+    <TextView
+        android:id="@+id/gameFinishedText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="JUEGO FINALIZADO"
+        android:layout_centerInParent="true"
+        android:visibility="invisible"/>
 
 </RelativeLayout>
