--- a/app/src/main/res/layout-land/fragment_home.xml
+++ b/app/src/main/res/layout-land/fragment_home.xml
@@ -3,14 +3,27 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:background="@android:color/holo_purple">
 
-    <TextView
-        android:id="@+id/buttonPlay"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="JUGAR"
-        android:layout_centerInParent="true"
-        style="@style/ButtonText" />
+        android:layout_centerInParent="true">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_arrow_upward_24dp"
+            android:layout_gravity="center"/>
+
+        <TextView
+            android:id="@+id/buttonPlay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="JUGAR"
+            android:layout_centerInParent="true"
+            style="@style/ButtonText"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
