--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,8 +9,8 @@
     </style>
 
     <style name="ButtonText" parent="TextAppearance.AppCompat">
-        <item name="android:textColor">@color/colorAccent</item>
-        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">32sp</item>
         <item name="android:textAlignment">center</item>
         <item name="android:textAppearanceMedium">@style/Base.TextAppearance.AppCompat.Medium</item>
         <item name="android:textStyle">bold</item>
