--- a/app/src/main/res/layout-land/fragment_game.xml
+++ b/app/src/main/res/layout-land/fragment_game.xml
@@ -3,7 +3,8 @@
     android:id="@+id/gameFullBackground"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark">
 
     <LinearLayout
         android:id="@+id/answerContainer"
@@ -55,7 +56,7 @@
         android:layout_height="wrap_content"
         android:text="Question"
         android:textColor="@android:color/holo_purple"
-        android:textSize="24sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         android:background="@android:color/white"
         android:layout_alignParentBottom="true"
@@ -68,6 +69,18 @@
         android:layout_height="wrap_content"
         android:text="JUEGO FINALIZADO"
         android:layout_centerInParent="true"
+        style="@style/ButtonText"
         android:visibility="invisible"/>
+
+    <TextView
+        android:id="@+id/questionSkipText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="OMITIDO"
+        style="@style/ButtonText"
+        android:layout_centerInParent="true"
+        android:visibility="invisible"/>
+
+
 
 </RelativeLayout>
