--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/colorPrimaryDark">
 
     <FrameLayout
         android:id="@+id/fragmentContainer"
@@ -26,5 +27,15 @@
         android:src="@drawable/ic_format_list_bulleted_black_24dp"
         android:padding="16dp"
         android:layout_alignParentEnd="true"/>
+
+    <TextView
+        android:id="@+id/buttonPlay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_rounded"
+        android:text="JUGAR"
+        style="@style/ButtonText"
+        android:padding="16dp"
+        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
